# crdc-le-referral-data

./: .gitignore  .pylintrc  Makefile  README.md  Snakefile  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
bulletproof/: constants.py  drop_rows_with_bad_data.ipynb
bulletproof/input/: crdc-referrals-arrests-cleaned.csv
clean/: Makefile
clean/input/: 1314-crdc-sch-characteristics.xlsx  1314-crdc-sch-enrollment.xlsx  1314-crdc-sch-referrals-arrests.xlsx  1718-crdc-sch-characteristics.csv  1718-crdc-sch-referrals-arrests.csv
clean/output/: crdc-referrals-arrests-cleaned-take1.csv  crdc-referrals-arrests-cleaned.csv
clean/src/: clean_crdc_data.py  constants.py  dilcia.py
notebooks/: crdc_le_referrals_arrests.ipynb  test.ipynb
notebooks/1718_referrals_arrests/: Makefile  crdc_le_referrals_arrests.ipynb  dilcia_crdc.ipynb
notebooks/crdc_referrals_arrests/: .gitignore  Makefile  crdc_le_referrals_arrests.ipynb  crdc_referrals_arrests.ipynb
notebooks/historical_trends/: Makefile  trends.ipynb
notebooks/input/: 1718-crdc-sch-enrollment.csv  nielsen-dmas.geojson
raw/: 1314-crdc-sch-characteristics.xlsx.csv  1314-crdc-sch-enrollment.xlsx.csv  1314-crdc-sch-referrals-arrests.xlsx.csv  1718-crdc-sch-characteristics.csv  2021-crdc-sch-characteristics.csv  2021-crdc-sch-enrollment.csv  2021-crdc-sch-referrals-arrests.csv  School_Learning_Modalities__2020-2021.csv
shared/: Makefile
shared/hand/: 1718-crdc-reserve-codes.csv
shared/src/: constants.py  fix_504_variables.py  (+2 more)
src/: clean_crdc_data.py  constants.py
(+57 files in other folders)
